bootstrap/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: capz-aster
  annotations:
    kustomize.toolkit.fluxcd.io/ssa: IfNotPresent
